feat: add dashboard UI, containerize backend and frontend